Anirudh added requirements

--- a/examples/conformer_alignment.ipynb
+++ b/examples/conformer_alignment.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "449993fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NeMo W 2022-10-21 15:33:06 optimizers:55] Apex was not found. Using the lamb or fused_adam optimizer will error out.\n"
+     ]
+    }
+   ],
    "source": [
     "from nemo.utils import model_utils\n",
     "from nemo.collections.asr.models import ASRModel\n",
@@ -25,31 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4befde51",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[NeMo W 2022-10-21 02:00:03 nemo_logging:349] /home/anirudh/miniconda3/envs/alignment/lib/python3.8/site-packages/torch/cuda/__init__.py:83: UserWarning: CUDA initialization: Unexpected error from cudaGetDeviceCount(). Did you run some cuda functions before calling NumCudaDevices() that might have already set an error? Error 803: system has unsupported display driver / cuda driver combination (Triggered internally at  ../c10/cuda/CUDAFunctions.cpp:109.)\n",
-      "      return torch._C._cuda_getDeviceCount() > 0\n",
-      "    \n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NeMo I 2022-10-21 02:00:04 mixins:170] Tokenizer SentencePieceTokenizer initialized with 128 tokens\n"
+      "[NeMo I 2022-10-21 15:33:10 mixins:170] Tokenizer SentencePieceTokenizer initialized with 128 tokens\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[NeMo W 2022-10-21 02:00:04 modelPT:142] If you intend to do training or fine-tuning, please call the ModelPT.setup_training_data() method and provide a valid configuration file to setup the train data loader.\n",
+      "[NeMo W 2022-10-21 15:33:10 modelPT:142] If you intend to do training or fine-tuning, please call the ModelPT.setup_training_data() method and provide a valid configuration file to setup the train data loader.\n",
       "    Train config : \n",
       "    manifest_filepath: ../../data/hindi_normalized/filtered_hindi_v1_manifest.json\n",
       "    sample_rate: 16000\n",
@@ -67,7 +66,7 @@
       "    bucketing_strategy: synced_randomized\n",
       "    bucketing_batch_size: 8\n",
       "    \n",
-      "[NeMo W 2022-10-21 02:00:04 modelPT:149] If you intend to do validation, please call the ModelPT.setup_validation_data() or ModelPT.setup_multiple_validation_data() method and provide a valid configuration file to setup the validation data loader(s). \n",
+      "[NeMo W 2022-10-21 15:33:10 modelPT:149] If you intend to do validation, please call the ModelPT.setup_validation_data() or ModelPT.setup_multiple_validation_data() method and provide a valid configuration file to setup the validation data loader(s). \n",
       "    Validation config : \n",
       "    manifest_filepath: /root/ekstep/nemo_exp/vakyansh-nemo-experimentation/data/hindi_normalized/stt_valid_manifest.json\n",
       "    sample_rate: 16000\n",
@@ -78,7 +77,7 @@
       "    pin_memory: true\n",
       "    use_start_end_token: false\n",
       "    \n",
-      "[NeMo W 2022-10-21 02:00:04 modelPT:155] Please call the ModelPT.setup_test_data() or ModelPT.setup_multiple_test_data() method and provide a valid configuration file to setup the test data loader(s).\n",
+      "[NeMo W 2022-10-21 15:33:10 modelPT:155] Please call the ModelPT.setup_test_data() or ModelPT.setup_multiple_test_data() method and provide a valid configuration file to setup the test data loader(s).\n",
       "    Test config : \n",
       "    manifest_filepath: ../../data/tarini_manifest.json\n",
       "    sample_rate: 16000\n",
@@ -94,8 +93,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NeMo I 2022-10-21 02:00:04 features:225] PADDING: 0\n",
-      "[NeMo I 2022-10-21 02:00:06 save_restore_connector:243] Model EncDecCTCModelBPE was successfully restored from /home/anirudh/Desktop/forced-alignment/models/nemo/hindi/Conformer-CTC-BPE-Large.nemo.\n"
+      "[NeMo I 2022-10-21 15:33:10 features:225] PADDING: 0\n",
+      "[NeMo I 2022-10-21 15:33:14 save_restore_connector:243] Model EncDecCTCModelBPE was successfully restored from /home/anirudh/Desktop/forced-alignment/models/nemo/hindi/Conformer-CTC-BPE-Large.nemo.\n"
      ]
     }
    ],
@@ -109,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "61ac01cc",
    "metadata": {},
    "outputs": [],
